wp-content/plugins/wp-property-responsive-carousel/css/style.css
@font-face {
  font-family: 'carousel-arrows';
  src: url('fonts/carousel-arrows.eot?-95vnmw');
  src: url('fonts/carousel-arrows.eot?#iefix-95vnmw') format('embedded-opentype'), url('fonts/carousel-arrows.woff?-95vnmw') format('woff'), url('fonts/carousel-arrows.ttf?-95vnmw') format('truetype'), url('fonts/carousel-arrows.svg?-95vnmw#carousel-arrows') format('svg');
  font-weight: normal;
  font-style: normal;
}
/* HOME LISTINGS CAROUSEL */
.rdc-property-carousel {
  background: none;
}
.rdc-property-carousel .section-content {
  position: relative;
  max-width: 1240px;
  margin: 0 auto;
  padding: 40px 0px 40px 200px;
  min-height: 600px;
}
.rdc-carousel-title .rdc-carousel-filters {
  display: inline-block;
  margin-right: -50px;
  padding-right: 50px;
  width: 100%;
  position: relative;
  z-index: 1;
}
.rdc-carousel-title .rdc-carousel-filters ul {
  list-style: none;
  margin: 0;
  padding: 0;
}
.rdc-carousel-title .rdc-carousel-filters ul li {
  list-style: none;
  display: inline-block;
  margin-right: 16px;
  margin-bottom: 15px;
}
.rdc-carousel-title .rdc-carousel-filters ul li label {
  color: #bdbcbd;
  border: 1px solid #bdbcbd;
  padding: 6px 10px;
  height: 41px;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
}
.rdc-carousel-title .rdc-carousel-filters ul li label input {
  background: transparent;
  padding: 0;
  margin: 0;
  width: auto;
  border: none;
  color: #bdbcbd;
}
.rdc-carousel-title .rdc-carousel-filters ul li label select {
  background: transparent;
  padding: 0 28px 0 0;
  margin: 0;
  width: auto;
  border: none;
  color: white;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: url("images/arrow-down-white.png");
  background-position: 90% center;
  background-repeat: no-repeat;
}
.rdc-carousel-title .rdc-carousel-filters ul li label select option {
  color: #bdbcbd;
}
@media screen and (max-width: 470px) {
  .rdc-carousel-title .rdc-carousel-filters {
    padding-right: 0;
    margin-right: 0;
  }
  .rdc-carousel-title .rdc-carousel-filters li {
    margin-right: 0;
    display: block;
  }
  .rdc-carousel-title .rdc-carousel-filters li label input,
  .rdc-carousel-title .rdc-carousel-filters li label select {
    max-width: 175px;
  }
}
@media screen and (max-width: 400px) {
  .rdc-carousel-title .rdc-carousel-filters li label input,
  .rdc-carousel-title .rdc-carousel-filters li label select {
    max-width: 130px;
  }
}
.rdc-carousel-title a.rdc-carousel-next,
.rdc-carousel-title a.rdc-carousel-previous {
  top: 39%;
  left: 60px;
  position: absolute;
  width: 60px;
  height: 60px;
  font-family: 'carousel-arrows';
  speak: none;
  display: block;
  overflow: hidden;
  z-index: 9999;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  font-size: 14px;
  line-height: 56px;
  text-align: center;
  /* Better Font Rendering =========== */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-decoration: none;
  color: #FFFFFF;
  border-radius: 5px;
  background: #45484c;
  border: 1px solid #45484c !important;
}
.rdc-carousel-title a.rdc-carousel-next:hover,
.rdc-carousel-title a.rdc-carousel-previous:hover {
  color: white !important;
  border-radius: 5px;
  transition: color .3s, background .3s, border .3s;
}
.rdc-carousel-title a.rdc-carousel-previous {
  top: 51%;
}
.rdc-carousel-title a.rdc-carousel-next:before {
  content: "\e601";
}
.rdc-carousel-title a.rdc-carousel-previous:before {
  content: "\e600";
}
@media screen and (max-width: 600px) {
  .rdc-carousel-title a.rdc-carousel-previous {
    display: none;
  }
  .rdc-carousel-title a.rdc-carousel-next {
    display: none;
  }
}
.widget_rdc-carousel {
  overflow-x: hidden;
  overflow-y: hidden;
}
.rdc-carousel-wrapper {
  overflow: hidden;
  position: relative;
  left: 0;
  right: 0;
}
.rdc-carousel-wrapper ul.rdc-carousel-items {
  list-style: none;
  -webkit-transition: all 0.45s ease;
  -moz-transition: all 0.45s ease;
  -o-transition: all 0.45s ease;
  transition: all 0.45s ease;
  min-height: 200px;
  margin: 0;
  padding: 0;
  zoom: 1;
  width: 99999px;
  display: flex;
}
.rdc-carousel-wrapper ul.rdc-carousel-items:before {
  content: '';
  display: block;
}
.rdc-carousel-wrapper ul.rdc-carousel-items:after {
  content: '';
  display: table;
  clear: both;
}
.rdc-carousel-wrapper ul.rdc-carousel-items li.rdc-carousel-item {
  list-style: none;
  margin-left: 0;
  padding: 0;
  display: block;
  float: left;
  margin-right: 20px;
  width: 460px;
  overflow-x: hidden;
  overflow-y: hidden;
  border-radius: 5px;
  box-shadow: 0 0 10px #ddd;
  color: #5A595C;
  align-self: center;
}
.rdc-carousel-wrapper ul.rdc-carousel-items li.rdc-carousel-item h2{
  font-size: 2.7em;
  font-weight: bold;
  line-height: 1.5em;
  margin-bottom: 20px;
}
.rdc-carousel-wrapper ul.rdc-carousel-items li.rdc-carousel-item .lead{
  color: #929194;
  font-size: 1.3em;
  line-height: 1.55em;
  margin-bottom: 30px;
}
.rdc-carousel-wrapper ul.rdc-carousel-items li.rdc-carousel-item p{
  font-size: 1.2em;
  line-height: 1.55em;
}
.rdc-carousel-wrapper ul.rdc-carousel-items li.rdc-carousel-item > a:hover{
  text-decoration: none !important;
}
.rdc-carousel-wrapper ul.rdc-carousel-items li.descriptionBlock {
  border-radius: 0;
  box-shadow: none;
  margin-top: 0;
}
.rdc-carousel-wrapper ul.rdc-carousel-items li.descriptionBlock a {
  background: #bf2b1f none repeat scroll 0 0;
  border-radius: 5px;
  color: #fff;
  display: block;
  padding: 18px;
  width: 50%;
  text-align: center;
  margin-bottom: 30px;
  margin-top: 50px;
  font-size: 1.2em;
}
.rdc-carousel-wrapper ul.rdc-carousel-items li.rdc-carousel-item:last-child {
  margin-right: 0;
}
.rdc-carousel-wrapper ul.rdc-carousel-items li.rdc-carousel-item:hover .rdc-carousel-thumbnail div.thumb {
  background-size: 290px 211px;
}
.rdc-carousel-wrapper ul.rdc-carousel-items li.rdc-carousel-item:hover .rdc-carousel-thumbnail div.thumb span {
  opacity: 0.4 !important;
}
.rdc-carousel-wrapper ul.rdc-carousel-items li.rdc-carousel-item .rdc-carousel-thumbnail {
  line-height: 0;
  position: relative;
}
.rdc-carousel-wrapper ul.rdc-carousel-items li.rdc-carousel-item .rdc-carousel-thumbnail div.thumb {
  display: block;
  width: 500px;
  height: 250px;
  background-size: 275px 200px;
  background-position: center center;
}
.rdc-carousel-wrapper ul.rdc-carousel-items li.rdc-carousel-item .rdc-carousel-thumbnail div.thumb,
.rdc-carousel-wrapper ul.rdc-carousel-items li.rdc-carousel-item .rdc-carousel-thumbnail div.thumb span.overlay {
  -webkit-transition: all 0.35s ease;
  -moz-transition: all 0.35s ease;
  -o-transition: all 0.35s ease;
  transition: all 0.35s ease;
}
.rdc-carousel-wrapper ul.rdc-carousel-items li.rdc-carousel-item .rdc-carousel-thumbnail div.thumb span.overlay {
  display: block;
  width: 100%;
  height: 100%;
  opacity: 0;
}
.rdc-carousel-wrapper ul.rdc-carousel-items li.rdc-carousel-item .rdc-carousel-default-thumbnail {
  display: block;
  width: 100%;
  height: 200px;
  background: #e8e8e8;
  background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #e0e0e0), color-stop(1, #e8e8e8));
  background: -ms-linear-gradient(bottom, #e0e0e0, #e8e8e8);
  background: -moz-linear-gradient(center bottom, #e0e0e0 0%, #e8e8e8 100%);
  background: -o-linear-gradient(#e8e8e8, #e0e0e0);
}
.rdc-carousel-wrapper ul.rdc-carousel-items li.rdc-carousel-item .item-content {
  background: #fff;
  color: #474747;
}
.rdc-carousel-wrapper ul.rdc-carousel-items li.rdc-carousel-item .item-content h3 {
  font-size: 16px;
  color: #474747;
  margin: 0;
  padding: 20px 20px 10px;
  min-height: 46px;
}
.rdc-carousel-wrapper ul.rdc-carousel-items li.rdc-carousel-item .item-content h3 a {
  text-decoration: none;
  color: inherit;
}
.rdc-carousel-wrapper ul.rdc-carousel-items li.rdc-carousel-item .item-content p {
  color: #747375;
  font-size: 1.8em;
  margin: 0;
  padding: 25px 30px 0px 30px;
  text-align: left;
}
.rdc-carousel-wrapper ul.rdc-carousel-items li.rdc-carousel-item .item-content p span{
  color: #cf3428;
}
.rdc-carousel-wrapper ul.rdc-carousel-items li.rdc-carousel-item .item-content > span{
  color: #747375;
  display: block;
  font-size: 1.2em;
  text-align: left;
  padding: 0 30px;
}
.rdc-carousel-wrapper ul.rdc-carousel-items li.rdc-carousel-item .item-content ul {
  margin: 0;
  padding: 20px 20px 12px 20px;
  list-style: none;
  text-align: center;
}
.rdc-carousel-wrapper ul.rdc-carousel-items li.rdc-carousel-item .item-content ul li {
  list-style: none;
  display: inline-block;
  margin-right: 14px;
  color: #a7a9ac;
  font-size: 1.3em;
}
.rdc-carousel-wrapper ul.rdc-carousel-items li.rdc-carousel-item .item-content ul li:last-child {
  margin-right: 0;
}
.rdc-carousel-wrapper ul.rdc-carousel-items li.rdc-carousel-item .item-content ul li .singlePropertyIcon {
  color: #a7a9ac;
  font-size: 1.3em;
  margin-right: 10px;
  float: left;
}
.rdc-carousel-wrapper ul.rdc-carousel-items li.rdc-carousel-item .item-content ul li span.rdc-icon {
  display: inline-block;
  width: 24px;
  font-size: 24px;
  color: #a7a9ac;
}
.rdc-carousel-wrapper ul.rdc-carousel-items li.rdc-carousel-item .item-content ul li span.val {
  display: inline-block;
  margin-top: -4px;
  overflow: hidden;
}
.rdc-carousel-wrapper ul.rdc-carousel-items li.rdc-carousel-loading {
  display: block;
  width: 275px;
  height: 343px;
  float: left;
  background: url(images/carousel-loader.gif) #f6f6f6 center center no-repeat;
  margin: 0;
}
a.rdc-carousel-previous {
  display: none;
}
a.rdc-carousel-next {
  display: none;
}
@media screen and (max-width: 700px) {

  .rdc-carousel-title {
    display: none;
  }
  .rdc-property-carousel .section-content {
    padding: 40px 0 60px 40px;
  }


}

